fix some bug - overflow: auto;

--- a/src/Сomponents/GoodsCard/GoodsCard.module.scss
+++ b/src/Сomponents/GoodsCard/GoodsCard.module.scss
@@ -87,19 +87,9 @@ $lime-green: #4fa19d;
   }
   .productDetails {
     width: 50%;
-    background: $soft-blue;
     will-change: transform;
-    &::after {
-      content: "";
-      position: absolute;
-      top: -2px;
-      left: -2px;
-      background: linear-gradient(30deg, $soft-yellow, $soft-blue2, $bright-red, $lime-green,  $soft-yellow, $soft-blue2, $bright-red, $lime-green);
-      background-size: 300% 300%;
-      width: calc(100% + 3px);
-      height: calc(100% + 3px);
-      z-index: -1;
-    }
+    background-image: linear-gradient(90deg, rgb(160, 222, 219),rgb(3, 165, 209));
+    box-shadow: inset 2px 2px 2px hsla(0deg, 0%, 100%, 0.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
     h4 {
       margin: 0 auto;
       padding-top: 20px;
